@@ -1,3 +1,7 @@
+2004-02-20  Michael Meeks  <michael@ximian.com>
+
+	* tests/test-ui.c (main): add extra in-proc tests.
+
 2004-02-19  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-sync-toolbar.c
